debathena-linerva (1.13) unstable; urgency=low

  * cut commented code
  * EDIT_MOTD no longer exists in /etc/default/rcS

 -- Greg Price <price@mit.edu>  Sat, 28 Feb 2009 16:32:13 -0500

debathena-linerva (1.12) unstable; urgency=low

  * Remove DEB_AUTO_UPDATE_DEBIAN_CONTROL.
  * Change "Debian-Athena Project" to "Debathena Project".
  * Remove debian/control from version control.
  * Clean up debian/copyright.

 -- Tim Abbott <tabbott@mit.edu>  Sat, 24 Jan 2009 16:44:25 -0500

debathena-linerva (1.11) unstable; urgency=low

  * lose_setuid on /usr/lib/apache2/suexec and /usr/bin/lppasswd
  * Add bind9 as a dependency

 -- Nelson Elhage <nelhage@mit.edu>  Fri, 03 Oct 2008 22:06:22 -0400

debathena-linerva (1.10) unstable; urgency=low

  * Update k5login.

 -- Geoffrey Thomas <geofft@mit.edu>  Sat, 17 May 2008 03:53:48 -0400

debathena-linerva (1.9) unstable; urgency=low

  * Add /etc/ssh/sshd_config (for port 8080 sshd)
  * Add /etc/apt/preferences and /etc/apt/sources.list.d/backports.
  * Convert to use config-package.mk interface, new in config-package-
    dev 4.5
  * Replace DEB_REPLACE_FILES with DEB_TRANSFORM_FILES, as this was
    renamed in config-package-dev 4.5

 -- Tim Abbott <tabbott@mit.edu>  Mon, 21 Apr 2008 19:23:36 -0400

debathena-linerva (1.8) unstable; urgency=low

  * Add init.debathena, which causes /sbin/init to be executed in the 32-bit
    personality
  * There's no longer a sshd_config file - get rid of that

 -- Evan Broder <broder@mit.edu>  Sun, 20 Apr 2008 17:53:16 -0400

debathena-linerva (1.7) unstable; urgency=low

  * Add linerva-install

 -- Nelson Elhage <nelhage@mit.edu>  Sun, 20 Apr 2008 17:01:30 -0400

debathena-linerva (1.6) unstable; urgency=low

  * Clean up the postinst script somewhat.

 -- Tim Abbott <tabbott@mit.edu>  Wed, 16 Apr 2008 18:51:31 -0400

debathena-linerva (1.5) unstable; urgency=low

  * Repackage with new config-package-dev system.
  * Remove Athena emacs file (those belong in their own package)