@@ -2,7 +2,7 @@ Source: debathena-linerva
 Section: linerva/net
 Priority: extra
 Maintainer: Debathena Project <debathena@mit.edu>
-Build-Depends: @cdbs@, sysklogd
+Build-Depends: @cdbs@, sysklogd, logcheck
 Standards-Version: 3.7.2
 
 Package: debathena-linerva
