@@ -27,7 +27,8 @@ DEB_DIVERT_FILES_debathena-linerva += \
 	/sbin/init.debathena \
 	/etc/ssh/sshd_config.debathena.debathena
 DEB_TRANSFORM_FILES_debathena-linerva += \
-	/etc/syslog.conf.debathena
+	/etc/syslog.conf.debathena \
+	/etc/cron.d/logcheck.debathena
 
 include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/rules/config-package.mk
